made the swagger doc for rooms and the api.http tests
